--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6515,6 +6515,9 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_xinjiang.12.t: "Join Guominjun?"
  ww1_xinjiang.12.d: "Recent changes around Gansu province is quite radical to stabilise [ROOT.GetLeader]'s reign. He can join the Guominjung instead having this pity independence."
  ww1_xinjiang.12.b: "Good idea."
+ ww1_xinjiang.13.t: "[GetYear] Kumul Uprising"
+ ww1_xinjiang.13.d: "The Kumul region of Xinjiang is home to the Kumul Khanate, which for centuries has enjoyed a semi-independent status as a vassal banner state under the protection of the Qing dynasty. The Khan here speak fluent Chinese and have a friendly policy towards China, so we don't interfere. However, Maqsud Shah's harsh rule and taxation of his subjects has caused some to revolt, which is a bit of a nuisance for the local garrison."
+ ww1_xinjiang.13.a: "So...?"
 
  # SIAM
  ww1_siam.1.a: "Glory to Rama VI."
