--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8,29 +8,29 @@
 
  #Generic WW1
  ww1_generic.1.t: "Election of [GetYear]"
- ww1_generic.1.d: "[Root.GetNameDefCap] held democratic elections. [ROOT.GetLeader] said that he did everything possible so that the nation would not only survive in these difficult times, but also be able to succeed both economically and diplomatically. \n\n The election winner has already delivered a speech to his voters and is ready to accept the duties of the head of state."
+ ww1_generic.1.d: "[Root.GetNameDefCap] has held elections at last. [ROOT.GetLeader] has ensured the populace that every aspect of the vote was fair and just, and that the government will respect the results, as should the people. \n\nThe winner of the electon has already delivered a speech to the masses gathered in the capital and is ready to accept the duties of the head of state, whatever they may entail. A hope for a brighter future soars across the country, but only time will tell."
  ww1_generic.1.a: "Congratulations to them."
- ww1_generic.2.t: "Pacifist protests"
- ww1_generic.2.d: "The movement of pacifists demanding an immediate end to the bloody war is gaining strength in [Root.GetNameDef]. Millions of soldiers have already died in a brutal slog, and the population of our country has increasingly made itself clear that it is against this offensive war.\n\nLeftist and communist movements are using this to their advantage, making it known that they would somehow make everything better, and to our disbelief the people are listening. This has become a dangerous threat to the stability of the state. We must to take measures to restore our depleted lines on the front and simultaneously maintain stability at home in order to reduce the risk of new pacifist protests."
- ww1_generic.2.a: "Victory is near, bear with it for a little longer!"
- ww1_generic.3.t: "Mass workers' protests"
- ww1_generic.3.d: "Dissatisfied with working conditions, disgruntled workers have organized a protest march which is gaining more and more people every minute it is allowed to continue. Protest leaders demand labor reform to the extent that our war effort would sputter out. We cannot possibly accept all of their demands, might we accept a choice few?  so that workers have no reason to protest again."
+ ww1_generic.2.t: "Pacifists protest!"
+ ww1_generic.2.d: "There is a unified voice on the streets of our cities that call for an end to the war. Countless soldiers have fallen by gun, gas, or trench, and it seems our constituents have had enough. The men who haven't been conscripted yet march with the women who have taken the jobs in the factories. There is but one word on their tongue.\n\nPeace.\n\nSocialist saboteurs are preying upon this situation, as they are prone to do. It must be known that their promises of peace mean nothing, yet our people are desperate enough to listen to any voice calling for an end to the war. Our government, already in a sorry state due to the demands of the war, is on the brink of total collapse. We must deliver the knockout blow and finally end this travesty, once and for all."
+ ww1_generic.2.a: "Victory is near. It has to be."
+ ww1_generic.3.t: "Strikes across the nation!"
+ ww1_generic.3.d: "Dissatisfied with the present working conditions, disgruntled strikers have organized a march being emulated across the nation. Every day it is allowed to continue is another day the commonfolk are allowed to hear their siren song. Protest leaders demand labor reform at a time when too much reform would shatter our war effort. We cannot possibly accept all of their demands, and as such few choices lie before us. Negotiate, ignore, or repress to the fullest extent."
  ww1_generic.3.a: "They will soon tire of making noise."
  ww1_generic.3.b: "The gendarmerie will solve this problem."
  ww1_generic.3.c: "A little reform does not hurt."
- ww1_generic.4.t: "The gendarmerie suppressed the protest"
- ww1_generic.4.d: "The gendarmerie managed to convince the bulk of the protesters to disperse. There were some arrests and spatters of violence, however overall the situation has become much more peaceable."
+ ww1_generic.4.t: "The gendarmerie suppressed the protest!"
+ ww1_generic.4.d: "The gendarmerie has dispersed the protests successfully. The blood that stains the streets is of little importance, for the situation as a whole has turned completely in our favor. Let us pray such an event never happens again."
  ww1_generic.4.a: "We got lucky."
- ww1_generic.5.t: "Mass riots"
- ww1_generic.5.d: "While trying to detain the organisers of the protests through the gendarmerie, a call rang out for massive demonstrations across the nation, and it was answered much to our chagrin. The demonstrations quickly turned into riots, and the riots began to get violent. The gendarmerie proceeded to fire on the rioters, leading to a horrid bloodbath and unecessary carnage. These turn of events have revealed to the people that their government no longer represents their best interests, which is something that we fear we cannot redeem ourselves from. These petty demonstrations are now threatening the very heart of our nation."
+ ww1_generic.5.t: "Mass riots!"
+ ww1_generic.5.d: "The attempted detainment of the organizers of the protest has failed horribly! They were gone before our police forces arrived, and as such all was for naught. The worst part is that they somehow knew what we were planning to do. A roar has erupted around the country, an outrage at the prospect of arrest. Marches turned to riots, and soon the blood that stained the street wasn't just theirs, but ours too. This turn of events has made it seem to the common people that we no longer represented their interests. These once petty demonstrations are now threatening the very heart of our nation, and in turn our war effort."
  ww1_generic.5.a: "It's all falling apart!"
- ww1_generic.6.t: "[From.GetName] Killed in Action"
- ww1_generic.6.d: "In bringing the battle to a successful conclusion, tragically [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at way too much risk while leading [From.GetHerHis] men. [From.GetSheHeCap] has been shot, and the wounds were too much to survive. Our country won't forget [From.GetHerHis] sacrifice."
+ ww1_generic.6.t: "[From.GetName] killed in action."
+ ww1_generic.6.d: "A tragic occurence from an otherwise successful operation, [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at risk while leading [From.GetHerHis] men. As a result, [From.GetSheHeCap] has been fatally wounded, passing away soon after. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.6.a: "[From.GetSheHeCap] served [From.GetHerHis] country well."
- ww1_generic.7.t: "[From.GetName] Died from the Disease"
- ww1_generic.7.d: "[From.GetSheHeCap] couldn't recover from the disease [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately died. Our country won't forget [From.GetHerHis] sacrifice."
- ww1_generic.8.d: "The war is over. Peace is here, but at what cost? The lives of our brothers, fathers, and sons can never be brought back, but we can extract other consessions to hope to make up for them. The armistice is signed, and we intend on taking everything we can from the losers. Our enemies will rue the day they met the might of [Root.GetNameDef] and failed to meet the challenge. \n\n In this mod there is a truce that occurs that will establish a series of events that distribute land based on claims and cores. Disabling the Truce will affect the occuerence of events related to the consequences of the defeat of the opposing faction."
- ww1_generic.8.a: "Allow the truce."
+ ww1_generic.7.t: "[From.GetName] dead from disease."
+ ww1_generic.7.d: "[From.GetName] couldn't recover from the affliction [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately passed. Our country won't forget [From.GetHerHis] sacrifice."
+ ww1_generic.8.d: "The war is over. The soldiers on both sides of No Man's Land sing peace, peace at last. Our enemies have been trampled beneath our boots. They sought the shattering of our resolve, we in turn gave them our steel, and now their's lies shattered instead. Now, though, comes the time for reperations, for consequences, intended to try and make some sort of right after this bloody, bloody war. Or, we can keep going. Total victory is possible, but at what cost and at what worth?\n\nIn this mod there is a truce that will establish a series of events which eventually distribute land based on claims and cores. Disabling the truce will affect the occuerence of events related to the consequences of the defeat of the opposing faction."
+ ww1_generic.8.a: "Move forward with the truce."
  ww1_generic.8.b: "There will be no truce, only total victory!"
  ww1_generic.9.t: "Influenza Pandemic"
  ww1_generic.9.d: "The Influenza epidemic has struck, caused by unsanitary conditions during the Great War. It has found roots in [Root.GetNameDef], and we are paying the toll. Medical facilities are sounding the alarm, pleading for help. We haven't been confronted with an epidemic of this size in hundreds of years, and we aren't prepared to deal with it. There is a shortage of drugs and other medicinal equipment, hospitals are crowded beyond anything ever seen, and there aren't enough medical personnel to help everyone.\n\nThe origin of the virus is unknown as of now, but we do know it's everywhere. Countries currently at war cannot bear both the epidemic and their military's cohesion, and as such their fronts are breaking down into trenches full of disease ridden men, calling for their mothers."
@@ -11824,7 +11824,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_belorussia.8.b: "Hmm..."
  
  #PERSIA
- ww1_persia.1.t: "Ahmad Shah Reached His Maturity"
  ww1_persia.1.d: "Ahmad Shah was formally crowned and the regency is no longer needed."
  ww1_persia.1.a: "Can fix the damage done by his father?"
  ww1_persia.3.t: "Anglo-Russian military expedition"
