--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -163,7 +163,6 @@
  AUH_karl_von_heinold:0 "Karl von Heinold"
  AUH_maximilan_von_wickenburg:0 "Maximilan von Wickenburg"
  AUH_janos_sandor:0 "János Sándor"
- AUH_sandor_wekerle:0 "Sándor Wekerle"
  AUH_erasmus_von_handel:0 "Erasmus von Handel"
  AUH_erwin_von_schwartzenau:0 "Erwin von Schwartzenau"
  AUH_gabor_ugron:0 "Gábor Ugron"
@@ -1664,6 +1663,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  HUN_karoly_huszar:0 "Károly Huszár"
  HUN_istvan_tisza:0 "István Tisza"
  HUN_karoly_khuen_hedervary:0 "Károly Khuen-Héderváry"
+ HUN_sandor_wekerle:0 "Sándor Wekerle"
 
  # HYDERABAD
  HYD_mahbub_ali_khan:0 "Mahbub Ali Khan"
