--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -176,17 +176,17 @@
  ww1_strategic_bombing:0 "Strategic Bombing"
  ww1_strategic_bombing_desc:0 "As bombing is becoming more common, bombing plans evolve with each bombing, yielding greater devastation across military threats on the surface."
  ww1_tactical_bombing:0 "Tactical Bombing"
- ww1_tactical_bombing_desc:0 "Military Tacticans evolve their tactics based on how they bomb to disable military advantages of enemy forces."
+ ww1_tactical_bombing_desc:0 "Military tacticans evolve their tactics based on how they bomb to disable military advantages of enemy forces."
  ww1_aerial_demoralization:0 "Aerial Demoralization"
  ww1_aerial_demoralization_desc:0 "Following intense bombing raids and overwhelming suppression enemy forces gradually become demoralized, enabling a wider path to victory."
  ww1_flying_aces:0 "Flying Aces"
- ww1_flying_aces_desc:0 "With all areas of conflict come the best of the best; there is no difference in air combat. Extremely Skilled Pilots build points of success leading to greater drive for combat across the entire military."
+ ww1_flying_aces_desc:0 "With all areas of conflict come the best of the best; there is no difference in air combat. Extremely skilled pilots build points of success leading to greater drive for combat across the entire military."
  ww1_improved_training:0 "Improved Training"
- ww1_improved_training_desc:0 "The air force further advances its ability to Militarize its population to fight more challenging threats of the time."
+ ww1_improved_training_desc:0 "The air force further advances its ability to militarize its population to fight more challenging threats of the time."
  ww1_night_operations:0 "Night Operations"
  ww1_night_operations_desc:0 "With the riskiness of flying at night comes the ability to take advantage of ill-prepared enemy forces at night."
  ww1_army_air_corps:0 "Army Air Corps"
- ww1_army_air_corps_desc:0 "Ground Forces further enhance cooperation and communication with the air force making the overall military more interlocked in battle." 
+ ww1_army_air_corps_desc:0 "Ground forces further enhance cooperation and communication with the air force making the overall military more interlocked in battle." 
  ww1_independent_air_force:0 "Independent Air Force"
  ww1_independent_air_force_desc:0 "Reliance on other air forces must stop to be effective in guiding our path."
  ww1_twilight_of_the_airship:0 "Twilight of the Airship"
