--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -28,7 +28,7 @@
  ww1_generic.6.d: "A tragic occurence from an otherwise successful operation, [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at risk while leading [From.GetHerHis] men. As a result, [From.GetSheHeCap] has been fatally wounded, passing away soon after. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.6.a: "[From.GetSheHeCap] served [From.GetHerHis] country well."
  ww1_generic.7.t: "[From.GetName] dead from disease."
- ww1_generic.7.d: "[From.GetName] couldn't recover from the affliction [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately passed. Our country won't forget [From.GetHerHis] sacrifice."
+ ww1_generic.7.d: "[From.GetName] couldn't recover from the affliction [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately passed away. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.8.d: "The war is over. The soldiers on both sides of No Man's Land sing peace, peace at last. Our enemies have been trampled beneath our boots. They sought the shattering of our resolve, we in turn gave them our steel, and now their's lies shattered instead. Now, though, comes the time for reperations, for consequences, intended to try and make some sort of right after this bloody, bloody war. Or, we can keep going. Total victory is possible, but at what cost and at what worth?\n\nIn this mod there is a truce that will establish a series of events which eventually distribute land based on claims and cores. Disabling the truce will affect the occuerence of events related to the consequences of the defeat of the opposing faction."
  ww1_generic.8.a: "Move forward with the truce."
  ww1_generic.8.b: "There will be no truce, only total victory!"
