--- a/localisation/russian/replace/replace_research_l_russian.yml
+++ b/localisation/russian/replace/replace_research_l_russian.yml
@@ -437,42 +437,42 @@
  improved_oil_plant:0 "Улучшенная нефтепереработка"
  improved_oil_plant_desc:0 "Использование ранее экспериментальных методов очистки в промышленном масштабе позволит нам быстрее приспосабливаться под доступные материалы и требования."
  RAILWAY_TITLE:0 "ЖЕЛЕЗНАЯ ДОРОГА"
- construction0:0 "Modern Infrastructure"
- construction0_desc:0 "The thoughtful design of infrastructure appeared at the beginning of the 19th century as part of development work in European metropolises."
+ construction0:0 "Современная инфраструктура"
+ construction0_desc:0 "Продуманное проектирование инфраструктуры появилось в начале XIX века в рамках работ по развитию европейских мегаполисов."
 
- basic_railways:0 "Basic Railway"
- basic_railways_desc:0 "Railways appeared during the industrialization of Europe and played an essential role in the transport of goods and people. It is also an efficient way of supplying large armed forces."
- narrow_gauge_railway:0 "Narrow-gauge railway"
- narrow_gauge_railway_desc:0 "Since narrow-gauge railways are usually built with tighter curves, smaller structure gauges, and lighter rails, they can be less costly to build, equip, and operate than standard- or broad-gauge railways."
- standard_gauge_railway:0 "Standard Gauge Railway"
- standard_gauge_railway_desc:0 "The standard-gauge railway is a railway with a track gauge of 1,435 mm (4 ft 8+(1/2) in). The standard gauge is also called Stephenson gauge or international gauge."
- flexible_rail_network:0 "Flexible Rail Networks"
- flexible_rail_network_desc:0 "The construction of double or triple coupled railway tracks makes it possible to organize transport and optimize the space consumed by the railway tracks."
- diesel_electric_control_system:0 "Diesel Electric Control System"
- diesel_electric_control_system_desc:0 "Early internal combustion locomotives and railcars used kerosene and gasoline as their fuel. Rudolf Diesel patented his first compression-ignition engine in 1898, and steady improvements to the design of diesel engines reduced their physical size and improved their power-to-weight ratios to a point where one could be mounted in a locomotive."
- triple_gauge_system:0 "Triple Gauge System"
- triple_gauge_system_desc:0 "In rare situations, three different gauges may converge on to a rail yard and triple-gauge track is needed to meet the operational needs of the break-of-gauge station - most commonly where there is insufficient space to do otherwise."
- maintenance_standard:0 "Maintenance Standard"
- maintenance_standard_desc:0 "Infrastructure owners specify permitted variances from the nominal gauge, and the required interventions when non-compliant gauge is detected."
+ basic_railways:0 "Базовая железная дорога"
+ basic_railways_desc:0 "Железные дороги появились в период индустриализации Европы и сыграли важнейшую роль в транспортировке товаров и людей. Кроме того, это эффективный способ снабжения крупных вооруженных сил."
+ narrow_gauge_railway:0 "Узкоколейная железная дорога"
+ narrow_gauge_railway_desc:0 "Поскольку узкоколейные железные дороги обычно строятся с более крутыми кривыми, меньшей шириной колеи и более легкими рельсами, их строительство, оснащение и эксплуатация обходятся дешевле, чем строительство стандартных или ширококолейных железных дорог."
+ standard_gauge_railway:0 "Железная дорога стандартной колеи"
+ standard_gauge_railway_desc:0 "Железная дорога стандартной колеи - это железная дорога с шириной колеи 1 435 мм. Стандартную колею также называют колеей Стефенсона или международной колеей."
+ flexible_rail_network:0 "Гибкие железнодорожные сети"
+ flexible_rail_network_desc:0 "Строительство железнодорожных путей с двойной или тройной связью позволяет организовать транспорт и минимизировать пространство, занимаемое железнодорожными путями."
+ diesel_electric_control_system:0 "Электронная система управления дизельным двигателем"
+ diesel_electric_control_system_desc:0 "Первые локомотивы и вагоны с двигателями внутреннего сгорания использовали в качестве топлива керосин и бензин. Рудольф Дизель запатентовал свой первый двигатель с воспламенением от сжатия в 1898 году, и постоянные усовершенствования конструкции дизельных двигателей позволили уменьшить их физические размеры и улучшить соотношение мощности и веса до такой степени, что один из них можно было установить на локомотив."
+ triple_gauge_system:0 "Система тройной колеи"
+ triple_gauge_system_desc:0 "В редких случаях три разных колеи могут сходиться на одном железнодорожном узле, и для удовлетворения эксплуатационных потребностей станции требуются путь тройной колеи - чаще всего в тех случаях, когда для иного способа не хватает места."
+ maintenance_standard:0 "Стандарт обслуживания"
+ maintenance_standard_desc:0 "Владельцы инфраструктуры указывают допустимые отклонения от номинальной ширины колеи и необходимые действия при обнаружении несоответствия колеи."
 
- powder_type_b:0 "Powder Type B"
- powder_type_b_desc:0 "Poudre B was the first practical smokeless gunpowder created in 1884. It was perfected between 1882 and 1884 at "Laboratoire Central des Poudres et Salpêtres" in Paris, France."
- double_base_propellant:0 "Double Base Propellant"
- double_base_propellant_desc:0 "Propellants mixtures containing nitrocellulose and nitroglycerin as explosive propellant ingredients are known as double-base powder. "
- synthetic_nitrogen:0 "Synthetic Nitrogen"
- synthetic_nitrogen_desc:0 "For a long time, sources of nitrogen compounds were limited. Natural sources originated either from biology or deposits of nitrates produced by atmospheric reactions. Nitrogen fixation by industrial processes like the Frank-Caro process and Haber-Bosch process eased this shortage of nitrogen compounds, to the extent that half of global food production now relies on synthetic nitrogen fertilisers."
- improved_synthetisation:0 "Improved Nitrogen Synthetisation"
- improved_synthetisation_desc:0 "Improvements has been made in the quality of the synthetical Nitrogen process, thanks to Haber-Bosch method of production."
- advanced_synthetisation:0 "Advanced Nitrogen Synthetisation"
- advanced_synthetisation_desc:0 "Improvements has been made in the quality of the synthetical Nitrogen process, thanks to Haber-Bosch method of production."
- interwar_synthetisation:0 "Interwar Nitrogen Synthetisation"
- interwar_synthetisation_desc:0 "Improvements has been made in the quality of the synthetical Nitrogen process, thanks to Haber-Bosch method of production."
+ powder_type_b:0 "Порох типа B"
+ powder_type_b_desc:0 "Poudre B - первый практический бездымный порох, созданный в 1884 году. Он был усовершенствован в период с 1882 по 1884 год в «Laboratoire Central des Poudres et Salpêtres» в Париже, Франция."
+ double_base_propellant:0 "Двухосновный пропеллент"
+ double_base_propellant_desc:0 "Пропеллентные смеси, содержащие нитроцеллюлозу и нитроглицерин в качестве компонентов взрывчатого вещества, известны как двухосновные пороха."
+ synthetic_nitrogen:0 "Синтетический азот"
+ synthetic_nitrogen_desc:0 "Долгое время источники соединений азота были ограничены. Источниками естественного происхождения служили либо биология, либо залежи нитратов, образующихся в результате атмосферных реакций. Фиксация азота с помощью промышленных процессов, таких как процесс Франка-Каро и процесс Габера-Боша, ослабила нехватку азотных соединений до такой степени, что половина мирового производства продуктов питания сегодня зависит от синтетических азотных удобрений."
+ improved_synthetisation:0 "Улучшенная синтезация азота"
+ improved_synthetisation_desc:0 "Благодаря методу производства Габера-Боша было улучшено качество синтетического азота."
+ advanced_synthetisation:0 "Передовая синтезация азота"
+ advanced_synthetisation_desc:0 "Благодаря методу производства Габера-Боша было улучшено качество синтетического азота."
+ interwar_synthetisation:0 "Межвоенная синтетизация азота"
+ interwar_synthetisation_desc:0 "Благодаря методу производства Габера-Боша было улучшено качество синтетического азота."
 
 
 
- UNLOCK_TRAINS:0 "Unlock §YCivilian Train§! Research."
- electric_railway:0 "Electric Railway"
- electric_railway_desc:0 "Railway electrification is the use of electric power for the propulsion of rail transport. Electricity is typically generated in large and relatively efficient generating stations, transmitted to the railway network and distributed to the trains."
+ UNLOCK_TRAINS:0 "Разблокирует возможность исследования §YГражданского поезда§!."
+ electric_railway:0 "Электрическая железная дорога"
+ electric_railway_desc:0 "Электрификация железных дорог - это использование электроэнергии для приведения в движение железнодорожного транспорта. Электричество обычно вырабатывается на крупных и относительно эффективных генерирующих станциях, передается в железнодорожную сеть и распределяется по поездам."
  haber_process:0 "Haber Process"
  haber_process_desc:0 "The Haber process is the main industrial procedure for the production of ammonia." 
  advanced_oil_plant:0 "Усовершенствованная нефтепереработка"
@@ -488,9 +488,9 @@
  construction5:0 "Строительство V"
  construction5_desc:0 "Будущее эффективного строительства заключается в более тщательном планировании отдельных проектов и повсеместном применении стандартизированных методов."
  excavation1:0 "Добыча ресурсов I"
- excavation1_desc:0 "Новые технологии в буровой отрасли позволяют нам добывать прежде недоступные ресурсы."
- stainless_steel:0 "Stainless Steel"
- stainless_steel_desc:0 "Stainless steel, also known as inox, corrosion-resistant steel and rustless steel, is an alloy of iron that is resistant to rusting and corrosion. It contains iron with chromium and other elements such as molybdenum, carbon, nickel and nitrogen depending on its specific use and cost."
+ excavation1_desc:0 "Совершенствование техники бурения позволяет нам добывать ресурсы, которые ранее были недоступны."
+ stainless_steel:0 "Нержавеющая сталь"
+ stainless_steel_desc:0 "Нержавеющая сталь, также известная как inox, - это сплав железа, устойчивого к ржавчине и коррозии. В состав этого сплава входит железо с хромом и другими элементами, такими как молибден, углерод, никель и азот, в зависимости от специфики использования и стоимости."
  excavation2:0 "Добыча ресурсов II"
  excavation2_desc:0 "Новые методики помогают нам вести более эффективную добычу. Мы уже не загрязняем ресурсы в процессе, что увеличивает количество «чистого» материала."
  excavation3:0 "Добыча ресурсов III"
