--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -1907,6 +1907,9 @@
  VICTORY_POINTS_11121: "Брагестад"
  VICTORY_POINTS_11519: "Льеж"
  VICTORY_POINTS_7971: "Сучжоу"
+ VICTORY_POINTS_3704: "Измаил"
+ VICTORY_POINTS_3407: "Хотин"
+ VICTORY_POINTS_6600: "Бельцы"
 
  PETROGRAD_PROV: "Petrograd"
  LENINGRAD_PROV: "Leningrad"
