--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -9170,7 +9170,7 @@
  POL_habsburg_king_desc:0 ""
  POL_polish_king:0 "Польский король"
  POL_polish_king_desc:0 "Конечно, Королевству Польскому нужен польский король."
- POL_galicia_transfer:0 "Трансфер Галиции"
+ POL_galicia_transfer:0 "Передача Галиции"
  POL_galicia_transfer_desc:0 "Поскольку наш король - из рода Габсбургов, мы можем попросить Австрию отдать нам Галицию. Однако наш сюзеренитет будет принадлежать Австрии."
  POL_take_galicia:0 "Взять Галицию"
  POL_take_galicia_desc:0 "Вся Галиция - наша законная территория."
