--- a/localisation/russian/ww1_modifiers_l_russian.yml
+++ b/localisation/russian/ww1_modifiers_l_russian.yml
@@ -85,5 +85,9 @@
  kiautschou_malus:0 "Японская оккупация в Шаньдуне"
  RUS_russian_civil_war_raging:0 "Гражданская война в России"
  cat_armored_cars_research:0 "£research_speed_texticon Скорость исследования бронемашины"
- QIN_autonomous_region:0 "Автономный регион"
- 
+ mongolian_banners_modifier:0 "Монгольские хошуны"
+ qinghai_modifier:0 "Цинхайские хуэйцы и тибетцы"
+ xinjiang_modifier:0 "Синьцзянские уйгуры"
+ kumul_modifier:0 "Кумульское Ханство"
+ kumul_abolished:0 "Кумульское Ханство было упразднено"
+ concessions_modifier:0 "Концессии в Китае"
