--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -1,36 +1,36 @@
 ﻿l_russian:
- ok:0 "Ок."
- ok.a:0 "Ок."
- event_generic_ok:0 "Ок"
- historical_tt:0 "§OЭто исторический выбор.§!"
- dangerous_tt:0 "§RЭто может быть опасно!§!"
- end_tt:0 "§YПодготовленный нами контент заканчивается на этом. Спасибо за игру!§!"
+ ok: "Ок."
+ ok.a: "Ок."
+ event_generic_ok: "Ок"
+ historical_tt: "§OЭто исторический выбор.§!"
+ dangerous_tt: "§RЭто может быть опасно!§!"
+ end_tt: "§YПодготовленный нами контент заканчивается на этом. Спасибо за игру!§!"
  
  #Generic WW1 
- ww1_generic.1.t:0 "Выборы [GetYear] года"
- ww1_generic.1.d:0 "[Root.GetName] провели демократические выборы. [ROOT.GetLeader] говорит, что он сделал все возможное, чтобы нация не только выжила в эти трудные времена, но и смогла добиться успеха как в экономическом, так и в дипломатическом плане. \n\n Победитель выборов уже выступил с речью перед своими избирателями и готов принять обязанности главы государства."
- ww1_generic.1.a:0 "Поздравляем его."
- ww1_generic.2.t:0 "Пацифистские протесты"
- ww1_generic.2.d:0 "Движение пацифистов, требующих немедленного прекращения кровопролитной войны, набирает силу в [Root.GetName]. Миллионы солдат уже погибли в жестокой бойне, а население нашей страны все чаще выступает с лозунгами против наступательной войны.\n\nВ то же время на фоне гражданских протестов набирают популярность левые движения и коммунисты, которые становятся опасной угрозой для стабильности государства. Необходимо принять меры по восстановлению трудовых ресурсов и стабильности, чтобы снизить риск новых пацифистских протестов."
- ww1_generic.2.a:0 "Победа близка, потерпите немного!"
- ww1_generic.3.t:0 "Массовые протесты трудящихся"
- ww1_generic.3.d:0 "Недовольные условиями труда, рабочие организовали марш протеста, который собирает все больше и больше людей. Лидеры протеста требуют проведения трудовой реформы, чтобы у рабочих не было причин для новых протестов."
- ww1_generic.3.a:0 "Они скоро устанут шуметь."
- ww1_generic.3.b:0 "Жандармерия решит эту проблему."
- ww1_generic.3.c:0 "Небольшая реформа не повредит."
- ww1_generic.4.t:0 "Жандармерия подавила протест"
- ww1_generic.4.d:0 "Жандармерии удалось убедить основную массу протестующих разойтись. Было несколько арестов и угроз, однако все прошло достаточно мирно."
- ww1_generic.4.a:0 "Нам повезло."
- ww1_generic.5.t:0 "Массовые беспорядки"
- ww1_generic.5.d:0 "При попытке жандармерии задержать лидеров протеста, толпа попыталась их отбить. Демонстрация переросла в беспорядки. Когда они попытались построить баррикады на главной улице, глава города принял решение о военном подавлении беспорядков. Демонстрация превратилась в кровавую бойню, которая надолго останется в памяти населения."
- ww1_generic.5.a:0 "Все разваливается на части!"
- ww1_generic.6.t: "[From.GetName] Killed in Action"
- ww1_generic.6.d: "In bringing the battle to a successful conclusion, tragically [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at way too much risk while leading [From.GetHerHis] men. [From.GetSheHeCap] has been shot, and the wounds were too much to survive. Our country won't forget [From.GetHerHis] sacrifice."
- ww1_generic.6.a: "[From.GetSheHeCap] served [From.GetHerHis] country well."
- ww1_generic.7.t: "[From.GetName] Died from the Disease"
- ww1_generic.7.d: "[From.GetSheHeCap] couldn't recover from the disease [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately died. Our country won't forget [From.GetHerHis] sacrifice."
+ ww1_generic.1.t: "Выборы [GetYear] года"
+ ww1_generic.1.d: "В государстве [Root.GetNameDefCap] наконец-то прошли выборы. [ROOT.GetLeader] заверил население, что все аспекты голосования были честными и справедливыми, и что правительство будет уважать результаты, как и народ. \n\nПобедитель выборов уже выступил с речью перед собравшимися в столице народными массами и готов принять на себя обязанности главы государства, чего бы это ни стоило. Надежды на светлое будущее витают по всей стране, но только время покажет."
+ ww1_generic.1.a: "Поздравляем его."
+ ww1_generic.2.t: "Пацифистские протесты!"
+ ww1_generic.2.d: "На улицах наших городов звучат единые голоса, призывающие к прекращению войны. Бесчисленное количество солдат пало под пулями, газом или в окопах, и, кажется, наши избиратели уже сыты по горло. Мужчины, которые еще не были призваны в армию, маршируют вместе с женщинами, занявшими рабочие места на заводах. У них на языке только одно слово:\n\nМир.\n\nСоциалистические диверсанты используют эту ситуацию в своих целях, как они это и делают. Необходимо знать, что их обещания о мире ничего не значат, но наши люди в отчаянии прислушиваются к любому голосу, призывающему к прекращению войны. Наше правительство, и без того находящееся в плачевном состоянии из-за требований войны, находится на грани полного краха. Мы должны нанести решающий удар и покончить с этой комедией раз и навсегда."
+ ww1_generic.2.a: "Победа близка. И она должна быть."
+ ww1_generic.3.t: "Забастовки по всей стране!"
+ ww1_generic.3.d: "Недовольные нынешними условиями труда, забастовщики организовали марш, которому подражают по всей стране. В течение каждого дня, проведенного в стране, обыватели могут услышать их песню. Лидеры протеста требуют трудовой реформы в то время, когда слишком сильные преобразования могут погубить наши военные усилия. Мы не можем принять все их требования, и поэтому перед нами стоит небольшой выбор. Вести переговоры, игнорировать или подавлять по полной программе."
+ ww1_generic.3.a: "Они скоро устанут шуметь."
+ ww1_generic.3.b: "Жандармерия решит эту проблему."
+ ww1_generic.3.c: "Небольшая реформа не повредит."
+ ww1_generic.4.t: "Жандармерия подавила протест!"
+ ww1_generic.4.d: "Жандармерия успешно разогнала протесты. Кровь, запятнавшая улицы, не имеет особого значения, ведь ситуация в целом изменилась полностью в нашу пользу. Будем надеяться, что такое событие больше не повторится."
+ ww1_generic.4.a: "Нам повезло."
+ ww1_generic.5.t: "Массовые беспорядки!"
+ ww1_generic.5.d: "Попытка задержания организаторов протеста потерпела ужасающий провал! Они ушли еще до прибытия нашей полиции, и все оказалось напрасным. Хуже всего то, что они каким-то образом узнали, что мы планируем сделать. По всей стране поднялся рев, возмущенный перспективой ареста. Марши переросли в беспорядки, и вскоре кровь, окрасившая улицы, была не только их, но и нашей. Из-за такого поворота событий простым людям стало казаться, что мы больше не представляем их интересы. Эти некогда мелкие демонстрации теперь угрожают самому сердцу нашей нации и, в свою очередь, нашим военным усилиям."
+ ww1_generic.5.a: "Все разваливается по частям!"
+ ww1_generic.6.t: "[From.GetName] убит в бою"
+ ww1_generic.6.d:0 "A tragic occurence from an otherwise successful operation, [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at risk while leading [From.GetHerHis] men. As a result, [From.GetSheHeCap] has been fatally wounded, passing away soon after. Our country won't forget [From.GetHerHis] sacrifice."
+ ww1_generic.6.a:0 "[From.GetSheHeCap] served [From.GetHerHis] country well."
+ ww1_generic.7.t:0 "[From.GetName] dead from disease."
+ ww1_generic.7.d:0 "[From.GetName] couldn't recover from the affliction [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately passed away. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.8.d:0 "Война закончилась. Наступил мир, но какой ценой? Жизни наших братьев, отцов и сыновей уже не вернуть, но мы можем добиться других уступок в надежде их компенсировать. Перемирие подписано, и мы намерены забрать у проигравших все, что сможем. Наши враги будут жалеть о том времени, когда они встретились с мощью [Root.GetNameDef] и не смогли справиться с этой задачей. \n\nВ этом моде есть перемирие, которое устанавливает ряд событий, распределяющих земли на основе претензий и ядер. Отключение перемирия повлияет на возникновение событий, связанных с последствиями поражения противоборствующей фракции."
- ww1_generic.8.a:0 "Разрешить перемирие."
+ ww1_generic.8.a: "Заключить перемирие."
  ww1_generic.8.b:0 "Перемирия не будет, только полная победа!"
  ww1_generic.9.t:0 "Пандемия гриппа"
  ww1_generic.9.d:0 "Эпидемия гриппа, вызванная антисанитарными условиями во время Великой войны, распространяется в [Root.GetName]. Медицинские учреждения бьют тревогу: эпидемия чрезвычайно велика, лекарств не хватает, больницы переполнены, врачей и санитаров не хватает.\n\nТочное место возникновения вируса назвать невозможно. Поэтому все континенты подвержены риску возникновения пандемии гриппа. Наибольшая вероятность распространения гриппа существует в странах, участвовавших в Великой войне."
@@ -4333,7 +4333,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ottoman.6.c:0 "Long live Sultan Ahmed Nihad"
  ottoman.6.e:0 "Long live Sultan Yusuf İzzeddin"
  ottoman.7.t:0 "Ottoman Sultan Restored"
- ottoman.7.d:0 "After the recent reactionary coup that took place in the empire, the new Yıldız Teşkilatı backed government has restored sultan to his throne. Seeing from how the recent sultans were unable to rule efficiently, thi begs some questions... If the new sultan will be able to rule with competency and save the empire? Well, only history knows the answer to this question."
+ ottoman.7.d:0 "After the recent reactionary coup that took place in the empire, the new Yıldız Teşkilatı backed government has restored sultan to his throne. Seeing from how the recent sultans were unable to rule efficiently, this begs some questions... If the new sultan will be able to rule with competency and save the empire? Well, only history knows the answer to this question."
  ottoman.7.a:0 "With or without a sultan, the man is still sick..."
  ottoman.7.b:0 "Long live the sultan!"
  ottoman.8.t:0 "[TUR.GetAdjective] Demands our Annexation"
@@ -6514,7 +6514,10 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_xinjiang.11.a:0 "Again?"
  ww1_xinjiang.12.t:0 "Join Guominjun?"
  ww1_xinjiang.12.d:0 "Recent changes around Gansu province is quite radical to stabilise [ROOT.GetLeader]'s reign. He can join the Guominjung instead having this pity independence."
- ww1_xinjiang.12.b:0 "Good idea." 
+ ww1_xinjiang.12.b:0 "Good idea."
+ ww1_xinjiang.13.t: "[GetYear] Kumul Uprising"
+ ww1_xinjiang.13.d: "The Kumul region of Xinjiang is home to the Kumul Khanate, which for centuries has enjoyed a semi-independent status as a vassal banner state under the protection of the Qing dynasty. The Khan here speak fluent Chinese and have a friendly policy towards China, so we don't interfere. However, Maqsud Shah's harsh rule and taxation of his subjects has caused some to revolt, which is a bit of a nuisance for the local garrison."
+ ww1_xinjiang.13.a: "So...?" 
  
  #SIAM 
  ww1_siam.1.a:0 "Рама VI - король"
@@ -11821,7 +11824,6 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_belorussia.8.b:0 "Hmm..." 
  
  #PERSIA 
- ww1_persia.1.t:0 "Ахмад Шах достиг зрелости"
  ww1_persia.1.d:0 "Ахмад Шах был официально коронован, и регентство больше не нужно."
  ww1_persia.1.a:0 "Может исправить ущерб, нанесенный его отцом?"
  ww1_persia.3.t:0 "Англо-русская военная экспедиция"
