--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -2977,6 +2977,24 @@
  AFG_idea_i_hate_mountains:0 "Mountainous Warfare"
  AFG_idea_i_hate_mountains_desc:0 "Did you know that the mountains of Afghanistan are so high and so difficult to climb with troops? It is not a good idea to invade here without proper preparation. What's more, there are thousands of tribes in the region who may be unfriendly and aggressive towards intruders."
 
+ AFG_treaty_of_gandamak:0 "Treaty of Gandamak"
+ AFG_treaty_of_gandamak_desc:0 "The Treaty of Gandamak, signed in 1879 between the British Empire and Afghanistan, heavily restricts Afghanistan’s sovereignty, particularly in foreign affairs. Under this treaty, the British maintain control over Afghanistan’s external relations, while the country retains internal autonomy. Though the treaty has allowed Afghanistan to avoid direct colonial rule, it has also fostered resentment among Afghans, particularly the elite and nationalist factions, who view British interference as a humiliation."
+
+ AFG_limited_central_authority:0 "Limited Central Authority"
+ AFG_limited_central_authority_desc:0 "While the Emir of Afghanistan holds nominal authority, real power is fragmented among local tribal leaders and regional warlords, particularly in the more remote areas. The Emir's ability to enforce laws, collect taxes, or maintain a standing army is heavily dependent on negotiations and alliances with these influential tribal factions."
+
+ # Central Asia
+
+ idea_crossroad_of_empires:0 "At the Crossroad of Empires"
+ idea_crossroad_of_empires_desc:0 "Central Asia's position at the intersection of major trade routes between Europe, Asia, and the Middle East brings economic opportunities that few regions can match. Goods such as cotton, silk, and spices flow through its cities, creating vibrant markets and fostering commerce."
+
+ idea_russian_protectorate:0 "Russian Protectorate"
+ idea_russian_protectorate_desc:0 "As a protectorate of the Russian Empire, [FROM.GetNameDef] retain nominal internal autonomy but is subject to significant Russian influence. While [FROM.GetLeader] maintain control over domestic matters, Russia dictates foreign policy, military decisions and bring benefits such as protection from external threats and limited access to [RUS.GetAdjective] markets, but it also fosters resentment among the local population and ruling elites who chafe under [RUS.GetAdjective] oversight."
+ 
+ # Tibet
+ TIB_monastic_institutions:0 "Monastic Institutions"
+ TIB_monastic_institutions_desc:0 "Tibetan society is deeply intertwined with its monastic institutions, which are not only places of worship but also significant political entities, wielding considerable influence over local affairs. The lamas and monks within these institutions play a crucial role in preserving Tibetan culture, language, and traditions, with their authority extending beyond their spiritual realm, often shaping policies and decisions that affect the lives of ordinary Tibetans."
+
  #Siam
  SIA_bamboo_diplomacy:0 "Bending with the Wind"
  SIA_bamboo_diplomacy_desc:0 "Siam once ruled all of Indochina, but in order to survive the storming influence of Western colonial powers, it gave up much of its territory and interests to colonialists. In the end, however, Siam was able to remain one of the few independent country in Asia."
