--- a/localisation/russian/ww1_qing_l_russian.yml
+++ b/localisation/russian/ww1_qing_l_russian.yml
@@ -43,8 +43,8 @@
  QIN_mandate_of_heaven_desc:0 "We have reclaimed the Mandate of Heaven. We once again have the support of the people, and sufficient reforms have transformed the dynasty to the power it used to be. The time has come to throw off the shackles of colonial oppression, and assert our rightful place in the world."
  QIN_xiyu_conquest:0 "Xiyu Conquest"
  QIN_xiyu_conquest_desc:0 "The Emperor and his Empire shall revenge the bitter lost on the Battle of Talas!"
- QIN_aksai_kachin:0 "Demand Aksai-Kachin"
- QIN_aksai_kachin_desc:0 "Far-southern imperial border had been illegitimately drawn into so called the British Raj. The Emperor shall not ignore any his subject under foreign rule with an iron fist!"
+ QIN_aksai_kachin:0 "Beyond Tibet"
+ QIN_aksai_kachin_desc:0 "Far-southern imperial border had been illegitimately drawn into so called [601.Owner.GetNameDef]. The Emperor shall not ignore any his subject under foreign rule with an iron fist!"
  QIN_outer_manchurian_conquest:0 "Imperial Manchuria"
  QIN_outer_manchurian_conquest_desc:0 "No other "empire" is legitimated in Manchuria. Only the Chinese Empire under the Jurchen rule shall be there forever!"
  QIN_southern_expedition_of_dragon:0 "Southern Expedition"
