--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5611,7 +5611,9 @@ modify_rom_army_sup:0 "Modify §YRomanian Army§! by\n £supply_consumption_text
 modify_rom_army:0 "Modify §YRomanian Army§! by\n£army_experience Army Experience Gain: §G+0.03§!\n\n"
 ROM_army_org:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n"
 ROM_army_org2:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!"
-
+ww1_romania.69.t:0 "Results of Snap Elections"
+ww1_romania.69.t_d:0 "Riding a relative wave of stability and economic growth, Romanias incumbent party has managed to expand its majority in Romanias parliament, at the expense of the PC which has increasingly became an isolated political party. With this new mandate, we can continue our domestic agenda."
+ww1_romania.6.a:0 "Great!"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
 ROM_carol2:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §R-1.00%§!"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
