minor_patch_46.dds

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5597,6 +5597,9 @@ ROM_victory_in_the_great_war:0 "Begin Demobilization"
 ww1_romania.68.t:0 "The War has Ended!"
 ww1_romania.68.desc:0 "The Great War has affected Romania's economy badly, inflation is off the roofs and we have debts to pay and reperations to complete. We need to fix this problem immediately."
 ww1_romania.68.a:0 "There is more?!"
+ROM_discipline_the_army:0 "Discipline the Army"
+ROM_depoliticize_the_regime:0 "Depoliticize the Regime"
+ROM_expanding_our_majority_in_parliament:0 "Expand our Majority in Parliament"
 
 
 #custom tooltips
