british elections news

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9479,6 +9479,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_england.264.t: "[GetYear] General Election and the Cabinet Crisis"
  ww1_england.264.d: "As a result of the Great War, the British Empire lost its dominance and imperial order. The Cabinet resigned in disgrace, and no party won a majority in the general election promised immediately after the Armistice. Moreover, extremist political forces that rejects even parliamentarism are beginning to find a voice, and the people seem to be stirred."
  ww1_england.264.a: "Keep calm and carry on..."
+ ww1_england.265.t:0 "British Liberals Win 1910 Elections"
+ ww1_england.265.d:0 "The second elections in UK this year have been held due to Liberal need to gain stable enough mandate for Parliament Act. Unsurprisingly, while Conservatives had gathered the majority vote, Liberals emerged as the end victors thanks to Liberal coalition with Irish Parliamentary party. It is expected that Prime Minister Herbert Henry Asquith will continue to rule with a stable enough majority for the foreseable future, until the next elections that should take place 4 years later"
+ ww1_england.265.a:0 "An expected result"
+ ww1_england.266.t:0 "British Conservatives Win 1910 Elections"
+ ww1_england.266.d:0 "The second elections in UK this year have been held due to Liberal need to gain stable enough mandate for Parliament Act. Surprisingly, after Balfour's surprise removal from the Conservative party and his subsequent retirement, Conservative and Liberal Unionist Party under the leadership of [ENG.GetLeader] has stolen the win from the Liberals. With Liberal hopes dashed, incumbent prime minister Herbert Henry Asquith has congratulated the victors and expressed his hopes for the prosperity in Empire's future."
+ ww1_england.266.a:0 "Unexpected results"
+ ww1_england.267.t:0 "The 1910 Election"
+ ww1_england.267.d:0 "A General Election has rolled around in the United Kingdom. As expected, it was an easy Liberal victory. The results were almost the same as the ones from earlier this year, with Conservatives once again winning the popular vote but Liberals with their allies in Irish Parliamentary party stealing the win from the Conservative and Liberal Unionist party"
+ ww1_england.267.a:0 "Good"
 
  #the following events relate to Egypt and the British Collapse, and don't all directly relate to Britain.
  ww1_england.52.t: "Egypt breaks from our rule!"
