state of the military variable stuff

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -50,6 +50,12 @@ GER_ohl_lr:0 "OHL Command"
 GER_ohl_lc:0 "OHL Command"
 GER_ohl_rc:0 "OHL Command"
 GER_ohl_final:0 "OHL Command"
+GER_state_of_the_military:0 "State of the Military"
+GER_state_of_the_military_desc:0 "State of the Military is currently at [?state_of_the_military]"
+add_to_var:0 "Add 10"
+subtract_from_var:0 "Subtract 10"
+addten:0 "Increase State of the Military by 10"
+addfive:0 "Increase State of the Military by 5"
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
