--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -56,6 +56,10 @@ add_to_var:0 "Add 10"
 subtract_from_var:0 "Subtract 10"
 addten:0 "Increase State of the Military by 10"
 addfive:0 "Increase State of the Military by 5"
+GER_abteilung_3b:0 "Abteilung IIIb"
+GER_abteilung_3b_expand:0 "Abteilung IIIb"
+GER_abteilung_3b_foreign:0 "Abteilung IIIb"
+GER_abteilung_3b_expand_foreign:0 "Abteilung IIIb"
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
