--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -257,6 +257,8 @@ GER_reichstag_category:0 "Reichstag"
  GER_reichstag_category_desc:0 "The Reichstag is Germany's lower House of Parliament, as it has been from 1871 after being introduced with the imperial consitution. Within the governmental structure of the Reich, it represents the national and democratic element of the empire - alongside the federalism of the Bundesrat and the monarchic element of the governemtn, embodied in the Reich chancellor. Together with the Bundesrat, the Reichstag holds legislative power and shared in decision-making on Imperial law.\n\nLaws must be passed in the Reichstag before being sent through the Bundestrat, each law will be supported by different parties depending on their politcal alignment, the more powerful the party, the more votes the law will obtain. However, we can still lobby support from other parties."
 GER_election1:0 "Upcoming Reichstag Election"
 GER_election2:0 "Upcoming Reichstag Election"
+GER_calculate_predicted_results:0 "Predicted Results"
+GER_calculate_predicted_results_desc:0 "Predicted results will be updated."
 
 GER_reichstag_next_elections_category:0 "Predicted Election Results"
 
