--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3677,7 +3677,7 @@
  SER_army_debate_desc:0 "Secret societies and paramilitary groups exist not only in the military but within every branch of government. The question of what should be done with them remains unclear.
  SER_army_modernization:0 "Army Modernization"
  SER_army_modernization:0 "The Serbian Army, while expeienced and well equipped, is in need of seriours reorganisation if it hopes to function in the modern era."
- SER_artillery_grants:0 Subsidize the Artillery"
+ SER_artillery_grants:0 "Subsidize the Artillery"
  SER_artillery_grants_desc:0 "The Army has requested they be equipped with the latest artillery. Procurment from where does not matter, but hefty subsidies to domestic arms companies will be required."
  SER_foreign_canons:0 "Foreign Equipment"
  SER_foreign_canons_desc:0 "We are still using outdated equipment, while our industry struggles to meet demand. Foreign purchases of rifles, machine guns and artillery are very much needed."
@@ -3692,7 +3692,7 @@
  SER_neverending_journey:0 "Neverending Journey"
  SER_reform_the_war_cabinet:0 "Reform the War Cabinet"
  SER_integrate_montenegrin_commanders:0 "Integrate Montenegrin Commanders"
- SER_integrate_montenegrin_commanders_desc:0 "With the annexation of Montenegro, the countries military has also fallen under our control. Integration of the Montenegrin high command shall begin"
+ SER_integrate_montenegrin_commanders_desc:0 "With the annexation of Montenegro, the countries military has also fallen under our control. Integration of the Montenegrin high command shall begin."
  SER_reach_out_to_bosnian_resistance:0 "Reach Out to Bosnian Resistance"
  SER_reach_out_to_bosnian_resistance_desc:0 "In Bosnia, there are many sympathetic to our cause. With enough arms and training, they could sow havoc behind the the Austrian lines..." 
  SER_the_regency_question:0 "The Regency Question"
