--- a/localisation/russian/loading_tips_l_russian.yml
+++ b/localisation/russian/loading_tips_l_russian.yml
@@ -38,9 +38,9 @@
  LOADING_TIP_36: "Эта война, как и следующая, является войной, чтобы положить конец войне.\n- Дэвид Ллойд Джордж, 1916 г."
  LOADING_TIP_37: "В одиннадцать часов утра закончилась самая жестокая и страшная Война, которая когда-либо бичевала человечество. Я надеюсь, что мы можем сказать, что таким образом, в это роковое утро, пришел конец всем войнам.\n- Дэвид Ллойд Джордж, 11 ноября 1918 г."
  LOADING_TIP_38: "На полях Фландрии колышутся маки \nСреди крестов, стоящих за рядом ряд\n- Джон Маккрей, 1915 г."
- LOADING_TIP_39: "Боже, накажи Англию\n- Эрнст Лиссауэр"
+ LOADING_TIP_39: "Боже, накажи Англию.\n- Эрнст Лиссауэр"
  LOADING_TIP_40: "Что бы вы ни делали, вы теряете много людей.\n- Шарль Манжен"
- LOADING_TIP_41: "Самое мощное оружие на земле - это человеческая душа в огне\n- Фердинанд Фош"
+ LOADING_TIP_41: "Самое мощное оружие на земле - это человеческая душа в огне.\n- Фердинанд Фош"
  LOADING_TIP_42: "Отвали от Беме - этот Томми мой!\n- Освальд Бельке"
  LOADING_TIP_43: "Никакое превосходство в вооружении и боеприпасах, сколь бы велико оно ни было, не позволит одерживать победы без жертв человеческих жизней.\n- Фельдмаршал Хейг, июнь 1916 г."
  LOADING_TIP_44: "Все шло как по маслу... Сражение идет очень хорошо для нас, и немцы уже сдаются свободно. У врага так мало людей, что он собирает их со всех частей линии.\n- Фельдмаршал Хейг"
