--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -26,7 +26,7 @@
  ww1_generic.5.a: "Все разваливается по частям!"
  ww1_generic.6.t: "[From.GetName] убит в бою"
  ww1_generic.6.d:0 "A tragic occurence from an otherwise successful operation, [From.GetRank] [From.GetName] put [From.GetHerselfHimself] at risk while leading [From.GetHerHis] men. As a result, [From.GetSheHeCap] has been fatally wounded, passing away soon after. Our country won't forget [From.GetHerHis] sacrifice."
- ww1_generic.6.a:0 "[From.GetSheHeCap] served [From.GetHerHis] country well."
+ ww1_generic.6.a: "Он хорошо служил своей стране."
  ww1_generic.7.t:0 "[From.GetName] dead from disease."
  ww1_generic.7.d:0 "[From.GetName] couldn't recover from the affliction [From.GetSheHe] got while commanding [From.GetHerHis] troops, and ultimately passed away. Our country won't forget [From.GetHerHis] sacrifice."
  ww1_generic.8.d:0 "Война закончилась. Наступил мир, но какой ценой? Жизни наших братьев, отцов и сыновей уже не вернуть, но мы можем добиться других уступок в надежде их компенсировать. Перемирие подписано, и мы намерены забрать у проигравших все, что сможем. Наши враги будут жалеть о том времени, когда они встретились с мощью [Root.GetNameDef] и не смогли справиться с этой задачей. \n\nВ этом моде есть перемирие, которое устанавливает ряд событий, распределяющих земли на основе претензий и ядер. Отключение перемирия повлияет на возникновение событий, связанных с последствиями поражения противоборствующей фракции."
@@ -7010,7 +7010,16 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_usa.145.t:0 "Конец оккупации США в американских странах?" 
  ww1_usa.145.d:0 "Из-за Великой депрессии на правительство оказывается давление с целью вывода войск из оккупированных стран Америки." 
  ww1_usa.145.a:0 "Конечно, это обременительно." 
- ww1_usa.145.b:0 "Никогда." 
+ ww1_usa.145.b:0 "Никогда."
+ ww1_usa.146.t:0 "Wilson Wins the 1912 U.S. Election"
+ ww1_usa.146.d:0 "The 1912 United States presidential election has concluded with a dramatic result. Woodrow Wilson, the candidate of the Democratic Party, has emerged victorious, defeating not only the incumbent Republican president, William Howard Taft, but also former president Theodore Roosevelt, who ran under the Progressive ("Bull Moose") Party. This election marked a significant shift in American politics, as Wilson's platform of reform and progressivism resonated with many voters. His presidency promises to bring changes in domestic policy and a new vision for America's role on the world stage. The era of Wilsonian diplomacy and progressive reform has begun."
+ ww1_usa.146.a:0 "A new era of progress"
+ ww1_usa.147.t:0 "Taft Re-Elected in 1912"
+ ww1_usa.147.d:0 "In a surprising turn of events, William Howard Taft has managed to secure a second term as President of the United States, overcoming both the Progressive "Bull Moose" Party led by Theodore Roosevelt and the Democratic candidate, Woodrow Wilson. Despite divisions within the Republican Party, Taft's message of stability and continuity has resonated with the electorate. His victory signals that America is not yet ready to embrace radical change and prefers a steady hand in navigating domestic issues and foreign policy. With his re-election, Taft is expected to continue his cautious approach to progressive reform and international diplomacy."
+ ww1_usa.147.a:0 "Stability and Continuity Prevail"
+ ww1_usa.148.t:0 "Roosevelt Wins the 1912 U.S. Election"
+ ww1_usa.148.d:0 "In a stunning victory, former President Theodore Roosevelt has returned to the White House after winning the 1912 election as the candidate of the Progressive "Bull Moose" Party. His unprecedented third run for the presidency has resulted in a major upset for both the Republican incumbent, William Howard Taft, and Democratic candidate, Woodrow Wilson. Roosevelt's energetic campaign, built on promises of sweeping reforms, government regulation, and a "Square Deal" for the American people, captured the imagination of voters dissatisfied with the political status quo. Roosevelt's return marks the dawn of a new era of progressive policies aimed at curbing corporate power and expanding government oversight. A major factor contributing to his elections was the failed assassination attempt in Milwaukee during his campaign, and him surviving and continuing the speech made him legendary and increasing his popularity enough to leave both Taft and Wilson in the dust"
+ ww1_usa.148.a:0 "The Bull Moose Charges Ahead" 
   
  #  ww1_usa.130.a:0 "Okay" 
  #  ww1_usa.130.d:0 "Anti-American violence in the country of Haiti is threatening US business interests  especially considering that the local German community controls most of the Haitian industries., We must act quickly to preserve our economic dominance over Haiti." 
@@ -9479,6 +9488,15 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_england.264.t: "[GetYear] General Election and the Cabinet Crisis"
  ww1_england.264.d: "As a result of the Great War, the British Empire lost its dominance and imperial order. The Cabinet resigned in disgrace, and no party won a majority in the general election promised immediately after the Armistice. Moreover, extremist political forces that rejects even parliamentarism are beginning to find a voice, and the people seem to be stirred."
  ww1_england.264.a: "Keep calm and carry on..."
+ ww1_england.265.t:0 "British Liberals Win 1910 Elections"
+ ww1_england.265.d:0 "The second elections in UK this year have been held due to Liberal need to gain stable enough mandate for Parliament Act. Unsurprisingly, while Conservatives had gathered the majority vote, Liberals emerged as the end victors thanks to Liberal coalition with Irish Parliamentary party. It is expected that Prime Minister Herbert Henry Asquith will continue to rule with a stable enough majority for the foreseable future, until the next elections that should take place 4 years later"
+ ww1_england.265.a:0 "An expected result"
+ ww1_england.266.t:0 "British Conservatives Win 1910 Elections"
+ ww1_england.266.d:0 "The second elections in UK this year have been held due to Liberal need to gain stable enough mandate for Parliament Act. Surprisingly, after Balfour's surprise removal from the Conservative party and his subsequent retirement, Conservative and Liberal Unionist Party under the leadership of [ENG.GetLeader] has stolen the win from the Liberals. With Liberal hopes dashed, incumbent prime minister Herbert Henry Asquith has congratulated the victors and expressed his hopes for the prosperity in Empire's future."
+ ww1_england.266.a:0 "Unexpected results"
+ ww1_england.267.t:0 "The 1910 Election"
+ ww1_england.267.d:0 "A General Election has rolled around in the United Kingdom. As expected, it was an easy Liberal victory. The results were almost the same as the ones from earlier this year, with Conservatives once again winning the popular vote but Liberals with their allies in Irish Parliamentary party stealing the win from the Conservative and Liberal Unionist party"
+ ww1_england.267.a:0 "Good"
  
  #the following events relate to Egypt and the British Collapse, and don't all directly relate to Britain. 
  ww1_england.52.t:0 "Египет выходит из-под нашего правления!"
