annexation of terijoki

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -68,6 +68,8 @@
  RUS_law_of_equality_sd: "Law of Equality of Russians in Finland"
  RUS_law_of_equality_sc: "Law of Equality of Russians in Finland"
  RUS_law_of_equality_passed_in_sc: "Law of Equality of Russians in Finland was passed in the State Council"
+ RUS_law_on_annexation_of_terijoki_sd: "Law on Annexation of Terijoki"
+ RUS_law_on_annexation_of_terijoki_sc: "Law on Annexation of Terijoki"
  RUS_law_on_peasant_land_ownership_sc: "Law on Peasant Land Ownership"
  RUS_law_on_peasant_land_ownership_sd: "Law on Peasant Land Ownership"
  RUS_law_on_land_management_sc: "Law on Land Management"
@@ -192,6 +194,9 @@
  RUS_edict_on_grand_fleet_programme: "Emperor's Edict on Grand Fleet Programme"
  RUS_edict_on_increased_conscription: "Emperor's Edict on changing the Charter on military service"
  RUS_edict_on_kholm_governorate: "Emperor's Edict on Kholm Governorate"
+ RUS_edict_on_finnish_autonomy: "Emperor's Edict of all-Empire legislation procedures"
+ RUS_edict_of_equality: "Emperor's Edict of Equality of Russians in Finland"
+ RUS_edict_on_annexation_of_terijoki: "Emperor's Edict of Annexation of Terikoki"
  RUS_prosecute_produgol_decision: "Prosecute Produgol"
  RUS_prosecute_prodamet_decision: "Prosecute Prodamet"
  RUS_prosecute_prodvagon_decision: "Prosecite Prodvagon"
