--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -300,8 +300,8 @@
  has_monopolies_scripted_trigger_tt: "Has national spirit §YMonopoly Capitalism§!"
  has_authoritarian_zemstvo_scripted_trigger_tt: "Has national spirit §YAuthoritarian Zemstvo§!"
  not_has_authoritarian_zemstvo_scripted_trigger_tt: "Does not have national spirit §YAuthoritarian Zemstvo§!"
- duma_is_active_scripted_trigger_tt: "Not: The parliament has been dismissed"
- duma_is_not_active_scripted_trigger_tt: "The parliament has been dismissed"
+ duma_is_active_scripted_trigger_tt: "State Duma is active"
+ duma_is_not_active_scripted_trigger_tt: "Not: State Duma is active"
  controls_poland_scripted_trigger_tt: "Controls territories of Tsardom of Poland"
  not_controls_poland_scripted_trigger_tt: "Not: Controls territories of Tsardom of Poland"
 
