Punishments + fixing le vrai code

--- a/localisation/english/RUS_content_l_english.yml
+++ b/localisation/english/RUS_content_l_english.yml
@@ -281,6 +281,8 @@
  RUS_famine: "Famine"
  RUS_increased_conscription: "Increased Conscription"
  RUS_new_police: "New Police"
+ RUS_baku_strike: "Baku Strike"
+ RUS_mass_strikes: "Mass Strikes"
 
  #Scripted triggers
 
@@ -499,6 +501,14 @@
  ww1_russian_empire.31.t: "Monopolists Make a Proposal"
  ww1_russian_empire.31.a: "Very well"
  ww1_russian_empire.31.b: "This won't save them"
+ ww1_russian_empire.32.t: "Shooting at Lena Goldfields!"
+ ww1_russian_empire.32.a: "Horrible!"
+ ww1_russian_empire.33.t: "Baku Strike!"
+ ww1_russian_empire.33.a: "Horrible!"
+ ww1_russian_empire.34.t: "Mass Strikes!"
+ ww1_russian_empire.34.a: "Horrible!"
+ ww1_russian_empire.35.t: "Guchkov Joins the Opposition!"
+ ww1_russian_empire.35.a: "What is the matter with this man?!"
 
  #FOREIGN POLICY EVENTS
  ww1_russian_empire.30.t: "Persia rejects the ultimatum"
