--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5600,6 +5600,11 @@ ww1_romania.68.a:0 "There is more?!"
 ROM_discipline_the_army:0 "Discipline the Army"
 ROM_depoliticize_the_regime:0 "Depoliticize the Regime"
 ROM_expanding_our_majority_in_parliament:0 "Expand our Majority in Parliament"
+ROM_this_will_have_better_effects_after_tt:0 "§RThis national spirit will give better effects after it expires.§R§W"
+ROM_continue_electrification:0 "Continue Electric Development"
+ROM_develop_danube_ports:0 "Develop the Danube Ports"
+empty_space_tt:0 " \n"
+ROM_enforce_fiscal_sustainability:0 "Enforce Fiscal Sustainability"
 
 
 #custom tooltips
