--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2865,6 +2865,8 @@ ROM_postwar_economy4:0 "Postwar Economy"
 ROM_postwar_economy5:0 "Postwar Economy"
 ROM_postwar_economy6:0 "Postwar Economy"
 ROM_postwar_economy7:0 "Postwar Economy"
+ROM_electrification_idea:0 "Electrifying Romania"
+ROM_electrification_idea2:0 "Romania Electrified"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
